# Form-Labeller

./: .draw_rect.py.swp  .gitignore  LICENSE  README.md  app.py  canvas.py  config.py  draw_poly.py  draw_rect.py  gui.py  log_debug.py  polygon.py  pyproject.toml  requirements.txt  setup.py  tight_box.py
.github/: FUNDING.yml
imgs/: 007.json  007.json.orig  img1.json  img1.json.orig
labeler/: __init__.py  canvas.py  config.py  draw_poly.py  gui.py  log_debug.py  polygon.py  tight_box.py
